--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./vars.scss";
 
 body {
   font-family: sans-serif;
@@ -6,4 +6,13 @@ body {
 
 div {
   margin-bottom: 10px;
+}
+
+.title {
+  color: $color-text;
+  font-size: 3em;
+}
+
+.link {
+  color: $color-link;
 }
